--- a/Musicana.Web/Web.config
+++ b/Musicana.Web/Web.config
@@ -78,4 +78,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="MusicanaEntities" connectionString="data source=.;initial catalog=Musicana;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
